--- a/index.html
+++ b/index.html
@@ -23,5 +23,10 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
+    <script>
+      // Ensure jsQR is available globally
+      window.jsQR = jsQR;
+    </script>
   </body>
 </html>
