--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bank Sampah Digital</title>
-    <meta name="description" content="Aplikasi Bank Sampah Digital - Manajemen Bank Sampah Modern" />
+    <meta name="description" content="Aplikasi Bank Sampah Digital Tambangan" />
     <meta name="author" content="Bank Sampah Digital" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="eco-cycle-log" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Bank Sampah Digital Tambangan" />
+    <meta property="og:description" content="Sistem Manajamen Bank Sampah Modern" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="@frmnsyah_" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
